test/ProvarANT/00D20000000m8SbEAI/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Inquiry Process</fullName>
        <description>Support process for inquiries</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE(
CASE( Priority,
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Priority Flag&quot;)</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestDate__c</fullName>
        <label>TestDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestFormula__c</fullName>
        <formula>IF( CreatedDate = NOW(), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestMulti__c</fullName>
        <label>TestMulti</label>
        <picklist>
            <picklistValues>
                <fullName>test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TestNumber__c</fullName>
        <label>TestNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestPercent__c</fullName>
        <label>TestPercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TestRichText__c</fullName>
        <label>TestRichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestURL__c</fullName>
        <label>TestURL</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>Inquiry Process</businessProcess>
        <description>Record Type for Inquiring</description>
        <label>Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test2</fullName>
        <active>true</active>
        <businessProcess>Inquiry Process</businessProcess>
        <label>Test2</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>